# storage/api-docs/api-docs.json
@@ -1256,6 +1256,53 @@
                 ]
             }
         },
+        "/orders/{id}/receipt": {
+            "get": {
+                "tags": [
+                    "OrdersController"
+                ],
+                "summary": "Generate PDF receipt untuk order",
+                "description": "Menghasilkan file PDF struk order. Hanya bisa diakses oleh kasir.",
+                "operationId": "2031a238dfa95284719c6357cafdd36f",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "UUID Order",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "uuid"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "PDF berhasil digenerate dan dikirim sebagai file download",
+                        "content": {
+                            "application/pdf": {}
+                        }
+                    },
+                    "404": {
+                        "description": "Order tidak ditemukan"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "User tidak memiliki akses"
+                    },
+                    "409": {
+                        "description": "Order belum selesai"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/tables": {
             "get": {
                 "tags": [
